--- a/WeatherProject/Weather.MVC/Views/Home/Index.cshtml
+++ b/WeatherProject/Weather.MVC/Views/Home/Index.cshtml
@@ -1,31 +1,78 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model Weather.MVC.ViewModels.HomeIndexViewModel
+@{
+    ViewBag.Title = "Väder är kul!";
+    ViewBag.Error = TempData["Error"] != null;
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Vad blir det för väder?</h1>
+    <p class="lead">Låt oss fråga YR.</p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    @Html.Partial("_FlashMessages")
+    <div class="col-md-6">
+        <h2>Välj ort</h2>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.WeatherReport.Id)
+            <div class="form-group">
+                @Html.LabelFor(model => model.CityToFind, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.CityToFind, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CityToFind, "", new { @class = "text-danger" })
+                </div>
+                <input type="submit" value="Sök" class="col-md-2 btn btn-default" />
+            </div>
+        }
+        @if (Model != null && Model.Cities != null)
+        {
+            foreach (var city in Model.Cities)
+            {
+                <p>
+                    @Html.ActionLink(String.Format("{0}, {1}, {2}", city.Name, city.Region, city.Country), null, new { name = city.Name, region = city.Region, country = city.Country })
+                </p>
+            }
+        }
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-offset-6 col-md-6"></div>
+    <div class="clearfix col-md-6">
+        @if (Model != null && Model.WeatherReport != null)
+        {
+            {
+                var i = 0;
+                foreach (var item in Model.WeatherReport.Forecasts)
+                {
+                <div>
+                    @if (i == 0)
+                    {
+                        <h3>Idag</h3>
+                    }
+                    else if (i <= 3 && item.Period == 0)
+                    {
+                        <h3>Imorgon</h3>
+                    } else if (item.Period == 0)
+                    {
+                        <h3>@item.TimeFrom.ToShortDateString()</h3>
+                    }
+                    <h4>@item.TimeFrom.ToShortTimeString() - @item.TimeTo.ToShortTimeString()</h4>
+                    <p>
+                        <div class="col-md-6">
+                            Temperatur: @item.Temperature &#176;C
+                        </div>
+                        <div class="col-md-6">
+                            <img src="http://api.yr.no/weatherapi/weathericon/1.1/?symbol=@item.Weather.GetHashCode();content_type=image/png" />
+                        </div>
+                    </p>
+                </div>
+                i = i + 1;
+                }
+            }
+        }
     </div>
 </div>
+
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/jqueryval")
