--- a/WeatherProject/Weather.MVC/Views/Home/Index.cshtml
+++ b/WeatherProject/Weather.MVC/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.CityToFind, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-8">
-                    @Html.EditorFor(model => model.CityToFind, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.CityToFind, new { htmlAttributes = new { @class = "form-control", @placeholder = "Ange ort här..." } })
                     @Html.ValidationMessageFor(model => model.CityToFind, "", new { @class = "text-danger" })
                 </div>
                 <input type="submit" value="Sök" class="col-md-2 btn btn-default" />
