--- a/WeatherProject/Weather.MVC/Views/HttpError/400.html
+++ b/WeatherProject/Weather.MVC/Views/HttpError/400.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeekError med httperrors</title>
-    <link href="/Content/bootstrap.css" rel="stylesheet" />
-    <link href="/Content/site.css" rel="stylesheet" />
-    <script src="/Scripts/modernizr-2.6.2.js"></script>
+    <title>Väder är kul!</title>
+    <link href="../../Content/bootstrap.css" rel="stylesheet" />
+    <link href="../../Content/site.css" rel="stylesheet" />
+    <script src="../../Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
